# ws2812b_dma_driver

./: CMakeLists.txt  README.md  STM32G0_toolchain.cmake  ws2812b.c  ws2812b.h  ws2812b_animations.h
include/: ws2812b.h
include/hal/: stm32g0xx_hal_conf.h  stm32g0xx_hal_tim.h  stm32g0xx_it.h
src/: main.c  stm32g0xx_it.c  ws2812b.c
src/lib/: ws2812b.c  ws2812b.h  ws2812b_animations.c  ws2812b_animations.h
